Fix left menu spacing & color change?

--- a/ACourtofThornsandRoses/css/main.css
+++ b/ACourtofThornsandRoses/css/main.css
@@ -98,6 +98,7 @@
   /* of the left column below    */
   #left {
     background: #8B0000;
+    color: white;
   }
 
   /* Change the background color  */
